--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Miyou - Watch Subbed and Dubbed Anime For Free. You can watch free anime series and movies with english subtitles or english dubbed. Free anime Streaming"
+      content="Animist - Watch Subbed and Dubbed Anime For Free. Stream anime series and movies with English subtitles or English dubbed. Free anime streaming."
     />
     <meta
       name="keywords"
-      content="Miyou - Watch Anime For Free, watch anime free online, watch anime free, watch anime online, anime streaming site, watch subbed anime, watch dubbed anime, gogoanime, gogo anime, anilist, Attack on Titan, Fullmetal Alchemist: Brotherhood, Hunter x Hunter, Demon Slayer, Steins Gate, Death Note"
+      content="Animist - Watch Anime For Free, watch anime free online, watch anime free, watch anime online, anime streaming site, watch subbed anime, watch dubbed anime, gogoanime, anilist, Attack on Titan, Fullmetal Alchemist: Brotherhood, Hunter x Hunter, Demon Slayer, Steins Gate, Death Note"
     />
     <meta
       name="google-site-verification"
@@ -24,14 +24,14 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Miyou - Watch Subbed and Dubbed Anime For Free. You can watch free anime series and movies with english subtitles or english dubbed. Free anime Streaming"
+      content="Animist - Watch Subbed and Dubbed Anime For Free. Stream anime series and movies with English subtitles or English dubbed."
     />
-    <meta property="og:url" content="https://www.miyou.tk/" />
+    <meta property="og:url" content="https://animist.app/" />
     <meta property="og:image" content="https://i.ibb.co/rv061Rg/showcase.png" />
-    <meta property="og:site_name" content="miyou.tk" />
+    <meta property="og:site_name" content="Animist" />
     <meta
       property="og:image:alt"
-      content="Miyou - Watch Subbed Dubbed Anime For Free"
+      content="Animist - Watch Subbed Dubbed Anime For Free"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -43,7 +43,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&family=Zen+Dots&family=Orbitron:wght@400;500;700&family=Poppins:wght@400;500;600;700&family=Raleway:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -56,7 +56,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Miyou - Watch Anime Free Online With English Sub and Dub</title>
+    <title>Animist - Watch Anime Free Online With English Sub and Dub</title>
     <base href="/" />
   </head>
   <body>
